# logcall

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: main.rs
src/: features.rs  lib.rs
tests/ui/err/: error-passthrough.rs  error-passthrough.stderr  has-no-argument.rs  has-no-argument.stderr  has-too-many-arguments.rs  has-too-many-arguments.stderr  item-is-not-a-function.rs  item-is-not-a-function.stderr  wrong-level.rs  wrong-level.stderr
tests/ui/ok/: async-in-trait.rs  async-mut.rs  async-trait.rs  async.rs  has-no-argument.rs  minitrace.rs  sync-mut.rs  sync.rs  unreachable.rs
