[package]
name = "logcall"
version = "0.1.3"
edition = "2021"
authors = ["andylokandy <andylokandy@hotmail.com>"]
description = "An attribute macro that logs the return value from function call."
repository = "https://github.com/andylokandy/logfn"
documentation = "https://docs.rs/logfn"
categories = ["development-tools::debugging"]
readme = "README.md"
keywords = ["log", "macro", "derive", "logging", "function"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
# The macro `quote_spanned!` is added to syn in 1.0.84
syn = { version = "1.0.84", features = [
  "full",
  "parsing",
  "extra-traits",
  "proc-macro",
  "visit-mut",
] }

[dev-dependencies]
trybuild = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.10.0"
async-trait = "0.1.70"
