[package]
name = "logcall"
version = "0.1.5"
edition = "2021"
authors = ["andylokandy <andylokandy@hotmail.com>"]
description = "An attribute macro that logs the function return value."
repository = "https://github.com/andylokandy/logfn"
documentation = "https://docs.rs/logfn"
categories = ["development-tools::debugging"]
readme = "README.md"
keywords = ["log", "macro", "derive", "logging", "function"]
license = "MIT"

[lib]
proc-macro = true

[features]
structured-logging = []     # if enabled, user crates should depend on `structured-logger`
format-display = []         # if enabled, cause the log! messages to serialize values with '{}' instead of '{:?}'
#structured-logging = ["structured-logger"]     # if enabled, user crates should depend on `structured-logger`

default=["structured-logging"]

[dependencies]
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
# The macro `quote_spanned!` is added to syn in 1.0.84
syn = { version = "2", features = [
    "full",
    "parsing",
    "extra-traits",
    "proc-macro",
    "visit-mut",
    "visit",
    "fold",
    "printing",
] }

[dev-dependencies]
trybuild = "1"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
structured-logger = "1"
async-trait = "0.1"

